# hyperliquid_deepseek_trading_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
src/: __init__.py  main_loop.py
src/ai/: __init__.py  deepseek_engine.py
src/exchange/: __init__.py  hyperliquid_client.py
src/logging/: __init__.py  chat_logger.py  trade_logger.py
src/risk/: __init__.py  risk_manager.py
src/strategies/: __init__.py  mean_reversion.py  ml_classifier.py  momentum.py
src/ui/: __init__.py  __main__.py  dashboard.py
src/ui/templates/: dashboard.html
